--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -53,9 +53,11 @@ on init
 
 on init && property:ro.boot.hwc=GLOBAL
     setprop ro.boot.product.hardware.sku davinci
+    enable nqnfc_1_2_hal_service 
 
 on init && property:ro.boot.hwc=CN
     setprop ro.boot.product.hardware.sku davinci
+    enable nqnfc_1_2_hal_service
 
 on fs
     mount_all /vendor/etc/fstab.qcom --early
