davinci: parts: write KCAL values and configure the preferences twice
* This should solve an issue where the SeekBars are not working unless the reset button is touched

Signed-off-by: daniml3 <danimoral1001@gmail.com>
Change-Id: Id2202c6bb519f7314ca6287f8b0267902f4ca3c6

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
     <application
         android:label="@string/device_settings_app_name"
-        android:persistent="true">
+        android:persistent="false">
 
         <receiver android:name=".BootCompletedReceiver">
             <intent-filter>
